--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
   <img class="icon" src="img/minus.png">
 </a>
 
+
+<a  href="http://www.facebook.com/sharer.php?u=YourURLHere" target="_blank" class="viewControlButton viewControlButton-9">
+  <img class="icon" src="img/facebook.png">
+</a>
+<a href="mailto:?Subject=YourSubjectHere&amp;Body=YourBodyContentHere" class="viewControlButton viewControlButton-10">
+  <img class="icon" src="img/email.png">
+</a>
+
 <script src="vendor/screenfull.min.js" ></script>
 <script src="vendor/bowser.min.js" ></script>
 <script src="vendor/marzipano.js" ></script>
